# life-tracker-client

./: CMakeLists.txt  KeyPress.cpp  KeyPress.h  MyGlobalShortcutHandler.cpp  MyGlobalShortcutHandler.h  main.cpp
